@@ -6,8 +6,8 @@ Icon=vinagre
 Terminal=false
 Type=Application
 StartupNotify=true
-MimeType=application/x-vnc
-Categories=GNOME;GTK;Network;
+MimeType=application/x-vnc;
+Categories=GNOME;GTK;Network;RemoteAccess;
 OnlyShowIn=GNOME;
 NoDisplay=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
