@@ -4,10 +4,10 @@ _Comment=Access remote desktops
 Exec=vinagre %U
 Icon=vinagre
 Terminal=false
-MimeType=application/x-remote-connection
+MimeType=application/x-remote-connection;
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Network;
+Categories=GNOME;GTK;Network;RemoteAccess;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=vinagre
