@@ -1,3 +1,6 @@
+2007-12-14  Jonh Wendell <jwendell@gnome.org>
+	Small adjusts in .desktop files. Closes #503650
+
 2007-12-13  Jonh Wendell <jwendell@gnome.org>
 	* src/vinagre-window.c (create_menu_bar_and_toolbar):
 	Flag some toolbar buttons as "important". Closes #503468
